Update UI components and add new features including AuthForm, ChatMessage, and Layout components

--- a/divine-wisdom-app/client/public/index.html
+++ b/divine-wisdom-app/client/public/index.html
@@ -4,14 +4,17 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#2C5F2D" />
+    <meta name="theme-color" content="#1A237E" />
     <meta
       name="description"
       content="Krishna's Divine Wisdom - Spiritual Guidance from Lord Krishna"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;600&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
+    <!-- Krishna theme fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Rozha+One&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <!-- Spiritual icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <title>Krishna's Divine Wisdom</title>
   </head>
   <body>
